[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-playground"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
bytemuck = { version = "1.22.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
